compiler/tests/safety/fail/x86-64/load.jazz
export
fn load_last(reg u64 input, reg u64 len) -> reg u64, reg u64
{
  reg   u64    j;
  reg   u64    x0, x1;
  stack u64[2] s;
  reg   u8     c;

  s[0] = 0;
  s[1] = 0;

  j = 0;
  while(j < len)
  { c = [:u8 input + j];
    s[:u8 j] = c;
    j += 1;
  }

  s[:u8 j] = 0x1;

  x0 = s[0];
  x1 = s[1];

  return x0, x1;
}
